Describe the changes made

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <!--<![endif]-->
 	<head>
 		<meta charset="utf-8">
-		<title>Victory Site</title>
+		<title>Cheema School</title>
 		<meta name="description" content="Responsive HTML5">
 		<meta name="author" content="Anmol Cheema">
 
